Adding article for scaling options

--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "gatsby-plugin-offline": "^3.3.3",
     "gatsby-plugin-sitemap": "^2.5.1",
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.13",
+    "gatsby-remark-autolink-headers": "^2.7.0",
+    "gatsby-remark-table-of-contents": "^0.2.1",
+    "gatsby-transformer-remark": "^2.12.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
